config/objects/Ping__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distance_and_Speed__c</fullName>
        <formula>if(len(text(round(Miles_From_Previous__c,0)))&gt;3,left(text(round(Miles_From_Previous__c,0)),1)&amp;&quot;,&quot;&amp;right(text(round(Miles_From_Previous__c,0)),3),text(round(Miles_From_Previous__c,0)))&amp; if(not(isnull(Miles_From_Previous__c)),&quot; miles @ &quot;,&quot;&quot;) &amp; if(MPH__c &gt; 0,text(round(MPH__c,0)) &amp; &quot; MPH&quot;,&quot;&quot;)</formula>
        <label>Distance and Speed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lat__c</fullName>
        <label>Lat</label>
        <precision>13</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Load__c</fullName>
        <label>Load</label>
        <referenceTo>Load__c</referenceTo>
        <relationshipLabel>Pings</relationshipLabel>
        <relationshipName>Pings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Lon__c</fullName>
        <label>Lon</label>
        <precision>13</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPH__c</fullName>
        <formula>if (and (not(isnull(Miles_From_Previous__c)),not(isnull(Minutes_From_Previous__c)),Minutes_From_Previous__c &gt; 0),Miles_From_Previous__c / (Minutes_From_Previous__c / 60),0)</formula>
        <label>MPH</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Miles_From_Previous__c</fullName>
        <label>Miles From Previous</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minutes_From_Previous__c</fullName>
        <label>Minutes From Previous</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pinged_At__c</fullName>
        <label>Pinged At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>State_Name__c</fullName>
        <label>State Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Pings</relationshipLabel>
        <relationshipName>Pings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_From_Previous__c</fullName>
        <formula>if (and(not(isnull(Minutes_From_Previous__c)),not(isblank(Minutes_From_Previous__c))),text(floor(Minutes_From_Previous__c / 60)) &amp;&quot;:&quot; &amp; lpad(text(mod(Minutes_From_Previous__c,60)),2,&quot;0&quot;)&amp;&quot; hrs&quot;,&quot;&quot;)</formula>
        <label>Time From Previous</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>IN TRANSIT</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>ARRIVED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEPARTED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Weather_Clouds__c</fullName>
        <label>Weather Clouds</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weather_Precip__c</fullName>
        <label>Weather Precip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weather_Temp__c</fullName>
        <label>Weather Temp</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weather_Wind__c</fullName>
        <label>Weather Wind</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weather__c</fullName>
        <formula>if (not(isblank(Weather_Clouds__c)),Weather_Clouds__c &amp; &quot; &amp; &quot; &amp; text(round(Weather_Temp__c,0)) &amp; &quot;° with &quot; &amp; text(round(Weather_Wind__c,0)) &amp; &quot;MPH winds.&quot; &amp; if(not(isblank(Weather_Precip__c)),&quot; &quot; &amp; Weather_Precip__c &amp; &quot; precip.&quot;,&quot;&quot;),&quot;&quot;)</formula>
        <label>Weather</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Name__c</fullName>
        <label>Zip Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zip</label>
        <referenceTo>ZipFive__c</referenceTo>
        <relationshipLabel>Pings</relationshipLabel>
        <relationshipName>Pings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Ping</label>
    <nameField>
        <displayFormat>P-{0}</displayFormat>
        <label>Ping Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Pinged_At_Time_Required</fullName>
        <active>true</active>
        <errorConditionFormula>isnull(Pinged_At__c)</errorConditionFormula>
        <errorDisplayField>Pinged_At__c</errorDisplayField>
        <errorMessage>The pinged at date and time cannot by blank.</errorMessage>
    </validationRules>
</CustomObject>